# ai_log_analyzer

./: .gitignore  README.md
.devcontainer/: Dockerfile.workspace  devcontainer.json  docker-compose.yml  tasks.json
ai_analyser_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai_analyser_service/src/: main.py
ai_analyser_service/src/annotations/: annotations.py
ai_analyser_service/src/api/: api.py
ai_analyser_service/src/config/: config.py
ai_analyser_service/src/models/: models.py
ai_analyser_service/src/services/: ai_service.py
orchestrator_service/: Dockerfile  pyproject.toml
orchestrator_service/src/: main.py
orchestrator_service/src/annotations/: annotations.py
orchestrator_service/src/api/: api.py
orchestrator_service/src/config/: config.py
parser_service/: Dockerfile  README.md  pyproject.toml
parser_service/src/: main.py
parser_service/src/models/: log_event.py
parser_service/src/parser/: base.py  circleci_parser.py  const.py  parser_factory.py
