[project]
name = "ai-analyser-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Yurii Kazan",email = "kazan.yura99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
